Fixing spacing between content and header

--- a/wp-content/themes/lingonberry/style.css
+++ b/wp-content/themes/lingonberry/style.css
@@ -982,7 +982,7 @@ html[xmlns] .slides { display: block; }
 .post-content *:last-child { margin-bottom: 0; }
 
 .post-content h1, .post-content h2, .post-content h3, .post-content h4, .post-content h5, .post-content h6 {
-	/*margin: 50px 0 20px;*/
+	margin: 50px 0 0;
 	color: #444;
 }
 
